--- a/vignettes/CaseStudies/DPMFA_LEON-T_FF_TRWP.Rmd
+++ b/vignettes/CaseStudies/DPMFA_LEON-T_FF_TRWP.Rmd
@@ -142,7 +142,7 @@ trapezoidal <- function(u, a, b, c, d) {
 ```{r Prepare excel data}
 # Path to excel file with distribution values
 #path_dist <- "N:/Documents/Simplebox/Microplastic_variables_v2.xlsx"
-path_parameters_file <- "vignettes/Case studies/CaseData/Microplastic_variables_v1.xlsx"
+path_parameters_file <- "vignettes/CaseStudies/CaseData/Microplastic_variables_v1.xlsx"
 
 Material_Parameters <- read_excel(path_parameters_file, sheet = "Polymer_data") |> 
   # change um to nm unit coversion
@@ -357,6 +357,6 @@ FF_R <-
   group_by(CompartmentFF,EmisComp) |> 
   summarise(FF_SS = mean(EqMass_SAP))
 
-write_csv(FF_R, file = "vignettes/Case studies/CaseData/FateFactors.csv")
+write_csv(FF_R, file = "vignettes/CaseStudies/CaseData/FateFactors.csv")
 
 ```
