--- a/vignettes/CaseStudies/20241123 testing LEON-T output.Rmd
+++ b/vignettes/CaseStudies/20241123 testing LEON-T output.Rmd
@@ -93,10 +93,13 @@ load(abspath_EU)
 
 # Convert to long format
 data_long_EU <- 
-  DPMFA_sink |> unnest(Mass_Polymer_kt, keep_empty = TRUE) |> 
+  DPMFA_sink |> 
+  unnest(Mass_Polymer_kt, keep_empty = TRUE) |> 
   pivot_longer(cols=-c(Type, Scale, Source, Polymer, To_Compartment, Material_Type, iD_source, RUN),
                names_to = "Year",
                values_to = "Mass_Polymer_kt") |>
+    rename(Cum_Mass_Polymer_kt = Mass_Polymer_kt) |> 
+  mutate(Mass_Polymer_kt = Cum_Mass_Polymer_kt - lag(Cum_Mass_Polymer_kt, default = 0)) |> 
   mutate(Mass_Polymer_kg_s = Mass_Polymer_kt*1000000/(365.25*24*3600)) |> # Convert kt/year to kg/s
   # filter(Material_Type == "micro") |> # Select microplastics only
   mutate(SBscale = ifelse(Scale == "EU", "C", "R")) 
